force-app/main/default/objects/Product2/fields/AMP__c.field-meta.xml
<CustomField>
    <fullName>AMP__c</fullName>
    <description>Campo utilizado en listas de precios de generación</description>
    <label>AMP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>