force-app/main/default/objects/Product2/fields/Aplicacion__c.field-meta.xml
<CustomField>
    <fullName>Aplicacion__c</fullName>
    <label>Aplicación</label>
    <length>50</length>
    <type>Text</type>
</CustomField>