force-app/main/default/objects/Product2/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <description>RUT de la Empresa
96971110-9 - Electromecánica
93141000-8 - Generación</description>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>93141000-8</fullName>
            </value>
            <value>
                <fullName>96971110-9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>