force-app/main/default/objects/Product2/fields/cod_proveedor__c.field-meta.xml
<CustomField>
    <fullName>cod_proveedor__c</fullName>
    <label>Código Proveedor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>