force-app/main/default/objects/Product2/fields/CodigoJDE__c.field-meta.xml
<CustomField>
    <fullName>CodigoJDE__c</fullName>
    <label>Código JDE</label>
    <length>255</length>
    <type>Text</type>
</CustomField>