force-app/main/default/objects/Product2/fields/DescripcionVenta__c.field-meta.xml
<CustomField>
    <fullName>DescripcionVenta__c</fullName>
    <label>Descripción Venta</label>
    <length>255</length>
    <type>Text</type>
</CustomField>