force-app/main/default/objects/Product2/fields/Imagen__c.field-meta.xml
<CustomField>
    <fullName>Imagen__c</fullName>
    <formula>IF (ISBLANK(DisplayUrl),&quot;&quot;, IMAGE(DisplayUrl, &quot;Image&quot;, 40, 60))</formula>
    <label>Imagen</label>
    <type>Text</type>
</CustomField>