force-app/main/default/objects/Product2/fields/ImagenMax__c.field-meta.xml
<CustomField>
    <fullName>ImagenMax__c</fullName>
    <formula>IF (ISBLANK(DisplayUrl),&quot;&quot;, IMAGE(DisplayUrl, &quot;Image&quot;, 133, 200))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imagen</label>
    <type>Text</type>
</CustomField>