force-app/main/default/objects/Product2/fields/LineaComercial__c.field-meta.xml
<CustomField>
    <fullName>LineaComercial__c</fullName>
    <label>Línea Comercial</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Industrial</fullName>
            </value>
            <value>
                <fullName>Comercial</fullName>
            </value>
            <value>
                <fullName>TTAs</fullName>
            </value>
            <value>
                <fullName>Servicios</fullName>
            </value>
            <value>
                <fullName>Accesorios</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>