force-app/main/default/objects/Product2/fields/Modelo__c.field-meta.xml
<CustomField>
    <fullName>Modelo__c</fullName>
    <description>Campo utilizado en listas de precios de generación</description>
    <label>Modelo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>