force-app/main/default/objects/Product2/fields/ModeloComercial__c.field-meta.xml
<CustomField>
    <fullName>ModeloComercial__c</fullName>
    <label>Modelo Comercial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>