force-app/main/default/objects/Product2/fields/Motor__c.field-meta.xml
<CustomField>
    <fullName>Motor__c</fullName>
    <description>Campo utilizado en listas de precios de generación</description>
    <label>Motor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>