force-app/main/default/objects/Product2/fields/Negocio__c.field-meta.xml
<CustomField>
    <fullName>Negocio__c</fullName>
    <label>Negocio</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electromecánica</fullName>
            </value>
            <value>
                <fullName>Generación</fullName>
            </value>
            <value>
                <fullName>Servicios</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>