force-app/main/default/objects/Product2/fields/Nodo__c.field-meta.xml
<CustomField>
    <fullName>Nodo__c</fullName>
    <label>Nodo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>