force-app/main/default/objects/Product2/fields/ProductoNoMix__c.field-meta.xml
<CustomField>
    <fullName>ProductoNoMix__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Selecciona este campo, si este producto es o fue No-Mix</inlineHelpText>
    <label>Producto No-Mix</label>
    <type>Checkbox</type>
</CustomField>