force-app/main/default/objects/Product2/fields/Subfamilia2__c.field-meta.xml
<CustomField>
    <fullName>Subfamilia2__c</fullName>
    <description>Campo solicitado por EM</description>
    <label>Subfamilia2</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>NEMA Hostyle Duty</fullName>
            </value>
            <value>
                <fullName>NEMA Corro Duty</fullName>
            </value>
            <value>
                <fullName>NEMA EP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>