force-app/main/default/objects/Product2/fields/Subfamilia__c.field-meta.xml
<CustomField>
    <fullName>Subfamilia__c</fullName>
    <description>Grupo de artículos (SAP)</description>
    <label>Subfamilia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Motores Mix</fullName>
            </value>
            <value>
                <fullName>Accesorios</fullName>
            </value>
            <value>
                <fullName>Baja Tensión</fullName>
            </value>
            <value>
                <fullName>Coaxial Siti</fullName>
            </value>
            <value>
                <fullName>HMI</fullName>
            </value>
            <value>
                <fullName>Nema</fullName>
            </value>
            <value>
                <fullName>Tecles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>