force-app/main/default/objects/Product2/fields/SuppCatNum__c.field-meta.xml
<CustomField>
    <fullName>SuppCatNum__c</fullName>
    <label>N° de Parte</label>
    <length>50</length>
    <type>Text</type>
</CustomField>