force-app/main/default/objects/Product2/fields/Tipo__c.field-meta.xml
<CustomField>
    <fullName>Tipo__c</fullName>
    <description>El campo tipo se usa en las listas de precios de generación</description>
    <label>Tipo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>