force-app/main/default/objects/Product2/fields/Ultima_Actualizaci_n_Inventario__c.field-meta.xml
<CustomField>
    <fullName>Ultima_Actualizaci_n_Inventario__c</fullName>
    <label>Ultima Actualización Inventario</label>
    <length>50</length>
    <type>Text</type>
</CustomField>